02Jan01=======================================================================
1. added a help file for forward/latlong and updated the admin manual to
match. (g0vgs)
2. Add spot2csv.pl to convert spot files into tab delimited .csv format.
31Dec00=======================================================================
1. add lat/long info to show/prefix
30Dec00=======================================================================
1. added latest version of the admin manual from Ian G0VGS.
23Dec00=======================================================================
1. don't route anything back down the channel it came from.
2. and, in the process, fix some silly errors in routing converted rcmd PCs
3. changed all occurrances of 'freq' in filter help to 'on' and corrected
some errors (eg freq/ssb).
4. added latest admin manual.
18Dec00=======================================================================
1. fix double printing of DB results
2. add new style filtering for WWV and WCY to complete the set
3. got the field nos right (hopefully) on Announces for filters
05Dec00=======================================================================
1. fix frequency hinting routine so it correctly handles things like 'on 23cm'
where digits are the 'wrong' way round.
2. made default max days to search for spots 3 months.
3. added hex decodes for those pesky 'national' characters that aren't really
in grepdbg and watchdbg.
4. decide that we are using Latin-1 and therefore characters 0x80-0x9f are
not allowed.
5. fix the announces so that they are all UPPER CASE for poor old DXTelnet.
03Dec00=======================================================================
1. change grepdbg and watchdbg so that you can see a number of lines before
the condx that you are looking for so:-
  grepdbg 3 LOOP
  watchdbg 3 LOOP 
will show both the LOOP line and the preceeding 2 lines.
2. add PCPROT to all error condx lines in DXProt.pm so that you can watch
for them more easily.